fix: sidebar scroll issue and overlapping minimize button
- Fixed sidebar scroll issue that was causing some Reference Architectures to be cut off and non-navigable. [Screenshot attached]

- Resolved the overlap of the "Minimize Sidebar" button, which was previously superimposing over sidebar labels.

- Cleaned up and removed unnecessary scripts and code for better maintainability.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -780,3 +780,11 @@ html[data-navbar='false'] .navbar {
 html[data-footer='false'] .footer {
     display: none;
 }
+
+.sidebar_njMd {
+    padding-top: 5px !important;
+}
+
+.sidebarHidden_VK0M .dropdownDiv {
+  display: none;
+}
